2008-07-16	Nick Schermer <nick@xfce.org>

	* dialogs/keyboard-settings/main.c, 
	  dialogs/keyboard-settings/command-dialog.c: Fix compilation.

2008-07-16	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/keyboard-settings/keyboard-dialog.glade: In the last commit
	  I forgot to mention that I've removed the keyboard theme stuff from
	  the dialog because this would be too complicated to implement before
	  the release.

2008-07-16	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/keyboard-settings/Makefile.am,
	  dialogs/keyboard-settings/command-dialog{c,h},
	  dialogs/keyboard-settings/main.c,
	  dialogs/keyboard-settings/shortcut-dialog.{c,h}: Add command dialog
	  for entering/selecting a command for a shortcut. Finally implement
	  the button for adding a new shortcut. Editing both, shortcuts and
	  commands also works now. I might have to tweak the command dialog a
	  little so the file chooser behaves similar to the panel launcher
	  dialog. The last thing really missing now is that the
	  xfce4-settings-helper refreshes itself when a shortcut is
	  changed/removed/added.

2008-07-15	Nick Schermer <nick@xfce.org>

	* dialogs/display-settings/main.c: Read the gamma settings,
	  free the xrandr screen info and usse permissions when reading
	  from xf86vmode.

2008-07-15	Nick Schermer <nick@xfce.org>

	* configure.ac.in: Show if Xf86misc was found.

2008-07-15	Nick Schermer <nick@xfce.org>

	* xfce4-settings-helper/keyboard-shortcuts.c: Make it compile
	  here.
	* xfce4-settings-helper/xkb.c: Avoid division by zero.

2008-07-15	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-settings-helper/keyboard-shortcuts{c,h},
	  xfce4-settings-helper/Makefile.am,
	  xfce4-settings-helper/main.c: Add support for keyboard shortcuts.
	  Shortcuts are loaded, passive keyboard grabs are performed and
	  events with different modifier combinations are handled. The code
	  related to modifiers might not be sane, but it works quite well